--- a/config/certmanager/certificate.yaml
+++ b/config/certmanager/certificate.yaml
@@ -2,13 +2,13 @@
 # More document can be found at https://docs.cert-manager.io
 # WARNING: Targets CertManager v1.0. Check https://cert-manager.io/docs/installation/upgrading/ for breaking changes.
 apiVersion: cert-manager.io/v1
-kind: Issuer
+kind: ClusterIssuer
 metadata:
   labels:
-    app.kubernetes.io/name: namespacelabel-assignment
+    app.kubernetes.io/name: cert-manager
     app.kubernetes.io/managed-by: kustomize
   name: selfsigned-issuer
-  namespace: system
+  namespace: cert-manager
 spec:
   selfSigned: {}
 ---
@@ -19,17 +19,16 @@ metadata:
     app.kubernetes.io/name: certificate
     app.kubernetes.io/instance: serving-cert
     app.kubernetes.io/component: certificate
-    app.kubernetes.io/created-by: namespacelabel-assignment
-    app.kubernetes.io/part-of: namespacelabel-assignment
+    app.kubernetes.io/created-by: cert-manager
+    app.kubernetes.io/part-of: cert-manager
     app.kubernetes.io/managed-by: kustomize
   name: serving-cert  # this name should match the one appeared in kustomizeconfig.yaml
-  namespace: system
+  namespace: cert-manager
 spec:
   # SERVICE_NAME and SERVICE_NAMESPACE will be substituted by kustomize
   dnsNames:
-  - SERVICE_NAME.SERVICE_NAMESPACE.svc
-  - SERVICE_NAME.SERVICE_NAMESPACE.svc.cluster.local
+  - 10.96.84.99
   issuerRef:
-    kind: Issuer
+    kind: ClusterIssuer
     name: selfsigned-issuer
   secretName: webhook-server-cert # this secret will not be prefixed, since it's not managed by kustomize
