--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -1,12 +1,12 @@
 # Adds namespace to all resources.
-namespace: namespacelabel-assignment-system
+# namespace: namespacelabel-assignment-system
 
 # Value of this field is prepended to the
 # names of all resources, e.g. a deployment named
 # "wordpress" becomes "alices-wordpress".
 # Note that it should also match with the prefix (text before '-') of the namespace
 # field above.
-namePrefix: namespacelabel-assignment-
+# namePrefix: namespacelabel-assignment-
 
 # Labels to add to all resources and selectors.
 #labels:
