--- a/config/default/metrics_service.yaml
+++ b/config/default/metrics_service.yaml
@@ -3,10 +3,10 @@ kind: Service
 metadata:
   labels:
     control-plane: controller-manager
-    app.kubernetes.io/name: namespacelabel-assignment
+    app.kubernetes.io/name: cert-manager
     app.kubernetes.io/managed-by: kustomize
   name: controller-manager-metrics-service
-  namespace: system
+  namespace: cert-manager
 spec:
   ports:
   - name: http
