--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -1,17 +1,8 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  labels:
-    control-plane: controller-manager
-    app.kubernetes.io/name: namespacelabel-assignment
-    app.kubernetes.io/managed-by: kustomize
-  name: system
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: controller-manager
-  namespace: system
+  namespace: cert-manager
   labels:
     control-plane: controller-manager
     app.kubernetes.io/name: namespacelabel-assignment
