--- a/config/prometheus/monitor.yaml
+++ b/config/prometheus/monitor.yaml
@@ -7,7 +7,7 @@ metadata:
     app.kubernetes.io/name: namespacelabel-assignment
     app.kubernetes.io/managed-by: kustomize
   name: controller-manager-metrics-monitor
-  namespace: system
+  namespace: cert-manager
 spec:
   endpoints:
     - path: /metrics
