--- a/config/samples/dana_v1alpha1_namespacelabel.yaml
+++ b/config/samples/dana_v1alpha1_namespacelabel.yaml
@@ -1,10 +1,9 @@
 apiVersion: dana.dana.io/v1alpha1
 kind: NamespaceLabel
 metadata:
-  name: namespacelabel-sample7
-  namespace: default
+  name: namespacelabel-sample15
+  namespace: tal2
 spec:
   labels:
-    label_1: b
-    label_2: t
-    label_3: g
+    label_3: b
+    label_4: c
