--- a/config/webhook/cert-manager-certificate.yaml
+++ b/config/webhook/cert-manager-certificate.yaml
@@ -2,7 +2,6 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: selfsigned-issuer
-  namespace: namespacelabel-assignment-system
 spec:
   selfSigned: {}
 ---
@@ -10,13 +9,13 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: webhook-server-cert
-  namespace: namespacelabel-assignment-system
+  namespace: cert-manager
 spec:
   secretName: webhook-server-cert
   duration: 8760h
   renewBefore: 3720h
   dnsNames:
-    - namespacelabel-assignment-webhook-service.namespacelabel-assignment-system.svc
+    - webhook-service.cert-manager.svc
   issuerRef:
     name: selfsigned-issuer
     kind: ClusterIssuer
